--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="app/styles/project-list.component.css">
+	<link rel="stylesheet" href="app/styles/sign-in-modal.component.css">
     <!-- 1. Load libraries -->
 	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
      <!-- Polyfill(s) for older browsers -->
