--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 	<base href="/">
-    <title>Angular 2 QuickStart</title>
+    <title>Translation manager</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://apis.google.com/js/platform.js" async defer></script>
