Finishing frontend changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="app/styles/project-list.component.css">
 	<link rel="stylesheet" href="app/styles/sign-in-modal.component.css">
+	<link rel="stylesheet" href="app/styles/project-add.component.css">
     <!-- 1. Load libraries -->
 	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
      <!-- Polyfill(s) for older browsers -->
