--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css" />
+
     <link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="app/styles/project-list.component.css">
 	<link rel="stylesheet" href="app/styles/sign-in-modal.component.css">
@@ -25,6 +27,13 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>
+        <div class="row">
+            <div class="col-md-2 cold-md-offset-5">
+                <i class="fa fa-spinner"></i>
+                Loading...
+            </div>
+        </div>
+    </my-app>
   </body>
 </html>
