--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- 1. Load libraries -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script src="vendor/jquery.backstretch.min.js" ></script>
      <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
@@ -24,11 +25,13 @@
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('app').catch(function(err){ console.error(err); });
+        $.backstretch("http://localhost:3000/app/images/bigimg.jpg");
+
+        System.import('app').catch(function(err){ console.error(err); });
     </script>
   </head>
   <!-- 3. Display the application -->
-  <body>
+  <body style="overflow: hidden">
     <my-app>
         <div>
             <div class="col-md-2 col-md-offset-5 loading-spinner-wrapper">
@@ -42,7 +45,10 @@
     </my-app>
 
 
-
-
+    <!--
+    <script>
+        $.backstretch("http://localhost:3000/app/images/bigimg.jpg");
+    </script>
+    -->
   </body>
 </html>
