--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
+    <script src="node_modules/moment/min/moment.min.js"></script>
     <script>
         System.import('app').catch(function(err){ console.error(err); });
     </script>
